--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,28 +132,28 @@ button#equal {
 /* ===== Dark Theme ===== */
 .calculator.dark {
     background-color: #071115;
-}
+  }
 
-.calculator.dark#display {
-    color: #f8fafd;
-}
+  .calculator.dark #display {
+    color: #f8fafb;
+  }
 
-.calculator.dark button#clear {
+  .calculator.dark button#clear {
     background-color: #2d191e;
-    color: #fc4552;
-}
+    color: #bd3740;
+  }
 
-.calculator.dark button.btn-number {
+  .calculator.dark button.btn-number {
     background-color: #1b2f38;
     color: #f8fafb;
-}
+  }
 
-.calculator.dark button.btn-operator {
+  .calculator.dark button.btn-operator {
     background-color: #2e1f39;
     color: #aa00a4;
-}
-
-.calculator.dark button.btn-equal {
+  }
+  
+  .calculator.dark button.btn-equal {
     background-color: #223323;
-    color: #fff;
-}
+    color: #ffffff;
+  }
